2010-03-23  Glenn Morris  <rgm@gnu.org>

	* textmodes/flyspell.el (sgml-lexical-context): Autoload it.  (Bug#5752)

2010-03-21  Chong Yidong  <cyd@stupidchicken.com>

	* indent.el (indent-for-tab-command): Doc fix.

2010-03-22  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-remove-stale-state-cache): Fix
	off-by-one error.  Fixes bug #5747.

2010-03-22  Juanma Barranquero  <lekktu@gmail.com>

	* image-dired.el (image-dired-display-thumbs): Fix typo in docstring.
	(image-dired-read-comment): Doc fix.

	* json.el (json-object-type, json-array-type, json-key-type, json-false)
	(json-null, json-read-number):
	* minibuffer.el (completion-in-region-functions):
	* calendar/cal-tex.el (cal-tex-daily-end, cal-tex-number-weeks)
	(cal-tex-cursor-week):
	* emacs-lisp/trace.el (trace-function):
	* eshell/em-basic.el (eshell/printnl):
	* eshell/em-dirs.el (eshell-last-dir-ring, eshell-parse-drive-letter)
	(eshell-read-last-dir-ring, eshell-write-last-dir-ring):
	* obsolete/levents.el (allocate-event, event-key, event-object)
	(event-point, event-process, event-timestamp, event-to-character)
	(event-window, event-x, event-x-pixel, event-y, event-y-pixel):
	* textmodes/reftex-vars.el (reftex-index-macros-builtin)
	(reftex-section-levels, reftex-auto-recenter-toc, reftex-toc-mode-hook)
	(reftex-cite-punctuation, reftex-search-unrecursed-path-first)
	(reftex-highlight-selection): Fix typos in docstrings.

2010-03-19  Juanma Barranquero  <lekktu@gmail.com>

	* minibuffer.el (completion-in-region-functions): Fix docstring typos.

2010-03-18  Glenn Morris  <rgm@gnu.org>

	* mail/rmail.el (rmail-highlight-face): Restore option deleted
	2008-02-13 without comment; mark it obsolete.
	(rmail-highlight-headers): Use rmail-highlight-face once more.

2010-03-16  Chong Yidong  <cyd@stupidchicken.com>

	* woman.el (woman2-process-escapes): Only consume the newline if
	the filler character is on a line by itself (Bug#5729).

2010-03-16  Kenichi Handa  <handa@m17n.org>
